prevent horizontal scrolling on master and preview

--- a/css/main.less
+++ b/css/main.less
@@ -173,7 +173,9 @@ article {
 	left: -15px;
 	max-height: 500px;
 	margin-top: 7px;
+	overflow-x: hidden;
 	overflow: auto;
+	word-wrap: break-word;
 }
 
 .value {
@@ -215,7 +217,9 @@ article {
 .preview {
 	max-height: 500px;
 	margin-top: 7px;
+	overflow-x: hidden;
 	overflow: auto;
+	word-wrap: break-word;
 }
 
 .alert {
@@ -225,17 +229,6 @@ article {
 	top: 100%;
 	margin-top: 5px;
 }
-
-
-
-
-
-
-
-
-
-
-
 
 
 
